--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,13 +13,31 @@
   }
 }
 
+.project-container {
+  padding-left: 3em;
+  padding-right: 3em;
+  margin-top: 3em;
+}
+
+nav ul{
+  display: flex;
+  background-color: blanchedalmond;
+  margin-block-start: 0;
+  padding: 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+nav ul li{
+  list-style-type: none;
+  margin-right: 17px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: left;
+  align-items: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +53,26 @@
   to {
     transform: rotate(360deg);
   }
+  
+}
+
+.header {
+  background-color: #f4e04d;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #10375c;
+}
+
+table {
+  display: flex;
+  justify-content: center;
+  border: 1px solid gray;
+}
+td {
+  border: 1px solid gray;
+  width: 30em;
 }
